@@ -23,6 +23,11 @@ Version 1.7.1
        in repobrowser. (Stefan)
 - BUG: Issue #99: Memory corruption in
        repository browser. (Stefan)
+- BUG: Issue #102: renamed diff scripts. (Stefan)
+- BUG: Issue #102: tagging externals errors
+       not shown. (Stefan)
+- BUG: Issue #104: tagging externals for
+       files pegs to HEAD. (Stefan)
 
 Version 1.7.0
 Too many changes to list here. See the release notes for
